--- a/geolocation_search_lib/README
+++ b/geolocation_search_lib/README
@@ -1,4 +1,24 @@
-https://github.com/Microsoft/cpprestsdk
 
-sudo dnf install libpq-devel
-sudo dnf install libpqxx-devel.x86_64
+Installation dependences:
+Library need which must be install:
+* cpprestsdk - https://github.com/Microsoft/cpprestsdk
+* libpqxx - https://github.com/jtv/libpqxx
+* boost
+* libpq
+
+Application work with database PostgreSQL and www.ipstack.com to get data. You can start application with comand:
+
+./geolocation_search /path/geolocation.conf
+
+Argument /path/geolocation.conf it is path connfiguration (example connfiguration file is in configuration directory. It have two section:
+- database
+-- type - type of database. Now it is only support PostgreSQL
+-- name - database name. It should be "geolocations"
+-- user
+-- password
+-- hostname
+-- password
+- datasource
+-- type - type of datasource. Now it is support only ipstack
+--url - url endpoint
+--api_key - api key to ipstack service
